@@ -6,6 +6,8 @@
   - Improved Hypnotoad load balancing by calling srand() after starting a new
     worker in Mojo::Server::Prefork.
   - Fixed bug in Mojo::IOLoop where the accept limit was applied too broadly.
+  - Fixed bug in Mojo::Server::Prefork where the TTOU signal would not always
+    stop a worker.
   - Fixed bug in Mojo::DOM::CSS where combinators needed to be surrounded by
     whitespace.
 
